get rid of illegal reflective access warnings